Chat css and double scroll issue solved

--- a/app/assets/stylesheets/base/chat.scss
+++ b/app/assets/stylesheets/base/chat.scss
@@ -1,125 +1,144 @@
-#small-chat {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  z-index: 100;
+.side-left
+{
+  background-color: #2F4050;
+  height: 600px;
 }
-
-#small-chat .badge {
-  position: absolute;
-  top: -3px;
-  right: -4px;
+.current-user
+{
+  background-color: #263B4B;
+  font-size: 25px;
+  font-weight: bold;
+  color: #DFE4ED;
+  padding: 5px;
 }
-
-.open-small-chat {
-  height: 38px;
-  width: 38px;
-  display: block;
-  background: #1ab394;
-  padding: 9px 8px;
-  text-align: center;
-  color: #fff;
-  border-radius: 50%;
+.recipients-search
+{
+  font-size: 17px;
+  color: black;
+  height: 20px;
+  margin-top: 10%;
 }
-
-.open-small-chat:hover {
-  color: white;
-  background: #1ab394;
-}
-
-.small-chat-box {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 75px;
-  background: #fff;
-  border: 1px solid $border-color;
-  width: 230px;
-  height: 320px;
-  border-radius: 4px;
-}
-
-.small-chat-box.ng-small-chat {
-  display: block;
-}
-
-.body-small {
-  .small-chat-box {
-    bottom: 70px;
-    right: 20px;
-  }
-}
-
-.small-chat-box.active {
-  display: block;
-}
-
-.small-chat-box {
-
-  .heading {
-    background: $nav-bg;
-    padding: 8px 15px;
-    font-weight: bold;
-    color: #fff;
-  }
-
-  .chat-date {
-    opacity: 0.6;
-    font-size: 10px;
-    font-weight: normal;
-  }
-
-  .content {
-    padding: 15px 15px;
-
-    .author-name {
-      font-weight: bold;
-      margin-bottom: 3px;
-      font-size: 11px;
+.recipients
+{
+  font-size: 17px;
+  color: #A7B1C2;
+  height: 400px;
+  margin-top: 10%;
+  .person
+  {
+    padding-top: 2%;
+    padding-bottom: 2%;
+    color: #A7B1C2;
+    text-decoration: none;
+    &:hover{
+      background-color: #263B4B;
+      color: #FFFFED;
+      text-decoration: none;
     }
+  } 
 
-    > div {
-      padding-bottom: 20px;
-    }
+}
 
-    .chat-message {
-      padding: 5px 10px;
-      border-radius: 6px;
-      font-size: 11px;
-      line-height: 14px;
-      max-width: 80%;
-      background: #f3f3f4;
-      margin-bottom: 10px;
-    }
 
-    .chat-message.active {
-      background: #1ab394;
-      color: #fff;
-    }
 
-    .left {
-      text-align: left;
-      clear: both;
 
-      .chat-message {
-        float: left;
-      }
-    }
-
-    .right {
-      text-align: right;
-      clear: both;
-
-      .chat-message {
+.side-center
+{
+  background-color: #EEEEEE;
+  height: 600px;
+}
+.messages
+{
+  color: #797C7D;
+  font-size: 15px;
+}
+.recipient
+{
+  font-size: 25px;
+  font-weight: bold;
+  height: 20px;
+  color: #528EC2;
+  padding: 5px;
+}
+.chats
+{
+  font-size: 17px;
+  color: #797C7D;
+  height: 450px;
+  margin-top: 5%;
+  overflow-y: auto;
+  li
+  {
+    list-style: none;
+    .send
+    {
+      margin: 3px;
+      width: 80%;
+      float: right;
+      padding: 1%;
+      .image-r
+      {
         float: right;
+        background-color: #1AB394;
+        border-radius: 10px;
+        padding: 1%;
+        img
+        {
+          height: 100px;
+          width: 100px;   
+        }
       }
-
+      .text-r
+      {
+        float: right;
+        background-color: #FFFFFF;
+        color: #797C7D;
+        border-radius: 10px;
+        padding: 2%;
+      }
     }
-
+    .receiver
+    {
+      margin: 3px;
+      width: 80%;
+      float: left;
+      padding: 1%;
+      .image-l
+      {
+        float: left;
+        background-color: #1AB394;
+        border-radius: 10px;
+        padding: 1%;
+        img
+        {
+          height: 100px;
+          width: 100px;   
+        }
+      }
+      .text-l
+      {
+        float: left;
+        background-color: #FFFFFF;
+        color: #797C7D;
+        border-radius: 10px;
+        padding: 2%;
+      }
+    }
   }
+}
+.write
+{
+  margin-top: 3%;
+  color: black;
+}
 
-  .form-chat {
-    padding: 10px 10px;
-  }
 
+
+
+
+
+.side-right
+{
+  background-color: #EEEEEE;
+  height: 600px;
 }
